@@ -1,5 +1,7 @@
 FrostWire 2.6.2 build 708 - OCT/10/2022
  - removed MobileFuse adapter
+ - telluride build 23
+ - supports downloads of IG Reels, YT Stories and TikToks
 
 FrostWire 2.6.1 build 706 - SEP/11/2022
  - jlibtorrent 1.2.17.0 upgrade
